Enabled admin to grant other users different roles (#28)
* Enabled admin to grant other users different roles

* refactor code with error handling

* move common folder outside of domain
